# marigold

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  build.rs  log.txt  multiscattering
bvh/: Cargo.toml  build.rs
bvh/src/: lib.rs
bvh_sample_collector/: Cargo.toml
bvh_sample_collector/src/: main.rs
bvh_snapshots/adaptive_split/: bvh_chess_0_149727666.json  bvh_chess_0_193305995.json  bvh_chess_0_209163566.json  bvh_chess_0_290738424.json  bvh_chess_0_307266849.json  bvh_chess_0_321129889.json  bvh_chess_0_354976963.json  bvh_chess_0_392103114.json  bvh_chess_0_393109827.json  bvh_chess_0_393796711.json  bvh_chess_0_407390634.json  bvh_chess_0_447473105.json  bvh_chess_0_575177106.json  bvh_chess_0_579732076.json  bvh_chess_0_689393081.json  bvh_chess_0_812732939.json  bvh_chess_0_863531316.json  bvh_chess_0_900166922.json  bvh_chess_0_917333929.json  bvh_chess_0_959388761.json  bvh_chess_10_134472209.json  bvh_chess_10_374959317.json  bvh_chess_10_505579336.json  bvh_chess_10_537310851.json  bvh_chess_10_563540326.json  bvh_chess_10_622978110.json  bvh_chess_10_628924826.json  bvh_chess_10_642827042.json  bvh_chess_10_679971658.json  bvh_chess_10_750966123.json  bvh_chess_10_782536120.json  bvh_chess_10_819911938.json  bvh_chess_10_889568631.json  bvh_chess_10_938676679.json  bvh_chess_11_122409616.json  bvh_chess_11_204663504.json  bvh_chess_11_227337770.json  bvh_chess_11_303917273.json  bvh_chess_11_339761639.json  bvh_chess_11_459582027.json  (+1939 more)
bvh_snapshots/always_binned_sweep/: bvh_chess_0_164775009.json  bvh_chess_0_177990571.json  (+1959 more)
gltf_loading/: Cargo.toml
marigold/: .gitignore  Cargo.toml  build.rs
mesh_interface/: Cargo.toml
src/: egui.rs  main.rs
(+54656 files in other folders)
