[package]
name = "marigold"
version = "0.1.0"
edition = "2024"

[build-dependencies]
regex = "1.12.2"
chrono = "0.4.42"
rayon = "1.11.0"

[dependencies]
# rendering
wgpu = { version = "28.0.0", features = ["vulkan-portability", "spirv"] }
winit = "0.30.13"

# game engine stuff
bevy_ecs = { version = "0.18.1", features = ["debug"] }
glam = "0.30.9"

# user interface
egui = { git = "https://github.com/ambrosia13/egui" }
egui-wgpu = { git = "https://github.com/ambrosia13/egui" }
egui-winit = { git = "https://github.com/ambrosia13/egui" }

# logging
env_logger = "0.11.8"
log = "0.4.29"

# general utility
pollster = "0.4.0"
anyhow = "1.0.100"
derived-deref = "2.1.0"

# data manipulation
gpu_layout = "0.2.1"
bytemuck = "1.24.0"

# noise & random
rand = "0.9.2"
